--- a/style.css
+++ b/style.css
@@ -1,43 +1,46 @@
-nav {
+nav .navbar {
     background-color: #333;
     font-size: 1.2em;
     padding: 1em;
     text-align: center;
     position: fixed;
-    width:100%;
+    width: 100%;
     top: 0;
-    color:#fff;
     z-index: 1000;
-    list-style: none;
+}
+
+.navbar ul li a {
+    color: #fff;
 
 }
 
-nav > ul {
+.navbar ul {
     margin: 0;
     padding: 0;
+    list-style: none;
 }
 
-ul > li {
+.navbar ul li {
     display: inline;
     margin: 0 1em;
     color: #fff;
 }
 
-main {
+.main-content {
     padding: 5em;
 }
 
-main > section {
+.portfolio-container {
     padding: 2em 1em;
     text-align: center;
 }
 
-section #home h1 {
- font-size: 2.5em;
- margin-bottom: .5em;
+#home h1 {
+    font-size: 2.5em;
+    margin-bottom: .5em;
 }
 
-section #home p {
+#home p {
     font-size: 1.2em;
     color: #666
 }
@@ -49,11 +52,11 @@ section #portfolio {
     padding: 1em;
 }
 
-article .portfolio-item {
+.portfolio-item {
     background-color: #fff;
     border: 1px solid #ddd;
     margin: 1em;
-    box-shadow:0 4px 8px rgba(0,0,0,0.1);
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 30%;
     box-sizing: border-box;
     transition: transform .3s;
