--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ section #portfolio {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     width: 30%;
     box-sizing: border-box;
-    transition: transform .3s;
+    transition: transform 0.3s;
 }
 
 
