--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ section {
     color: #666
 }
 
-section #portfolio {
+.portfolio-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
